@@ -421,6 +421,12 @@ using the mode \code{'r|*'}.
 % patch 918101
 (Contributed by Lars Gust\"abel.)
 
+\item A new package \module{xml.etree} has been added, which contains
+a subset of the ElementTree XML library.  Available modules are
+\module{ElementTree}, \module{ElementPath}, and
+\module{ElementInclude}, from ElementTree 1.2.6. (Contributed by
+Fredrik Lundh.)
+
 \item The \module{xmlrpclib} module now supports returning 
       \class{datetime} objects for the XML-RPC date type.  Supply 
       \code{use_datetime=True} to the \function{loads()} function
@@ -437,6 +443,8 @@ using the mode \code{'r|*'}.
 
 % XXX new distutils features: upload
 
+% XXX should hashlib perhaps be described here instead?
+% XXX should xml.etree perhaps be described here instead?
 
 
 
