@@ -15,5 +15,6 @@ def runtest(name):
 runtest("test.test_minidom")
 runtest("test.test_pyexpat")
 runtest("test.test_sax")
+runtest("test.test_xml_etree")
 runtest("test.test_xmllib")
 runtest("test.test_xmlrpc")
